--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(174, 216, 243);
     font-family: Arial, Helvetica, sans-serif;
 }
+
 p {
     position: absolute;
 }
@@ -29,20 +30,24 @@ p {
     height: 120px;
     background: white;
     border-radius: 100px;
+    box-shadow: -10px 15px 15px rgb(134, 134, 134);
  }
+
  .cloud::after, .cloud::before{
-     content:"";
+     content: "";
      position: relative;
      display: inline-block;
-     background: inherit;
-     border-radius: inherit;
+     background: white;
+     border-radius: 100px;
  }
+
  .cloud::after{
      width: 100px;
      height: 100px;
      top: -120px;
      left: -100px;
  }
+
  .cloud::before{
      width: 180px;
      height: 180px;
@@ -71,14 +76,13 @@ p {
 }
 
 #top-stripe {
-    top: 5px;
+    top: 4px;
 }
 
 #center-stripe {
     top: 35%;
     height: 5px;
-    background:
-      repeating-linear-gradient(to right,white 0,white 50px,transparent 50px,transparent 100px)
+    background: repeating-linear-gradient(to right,white 0,white 50px,transparent 50px,transparent 100px)
 }
 
 #bottom-stripe {
